OpenVPN
Copyright (C) 2002-2005 OpenVPN Solutions LLC <info@openvpn.net>

$Id$

2005.10.xx -- Version 2.1-beta5

* More PKCS#11 additions/changes (Alon Bar-Lev).

2005.10.17 -- Version 2.1-beta4

* Fixed bug introduced in 2.1-beta3 where management
  socket bind would fail.
* --capath fix in ssl.c (Zhuang Yuyao).
* Added ".PHONY: plugin" to Makefile.am, reverted
  location of "plugin" directory (thanks to
  Matthias Andree for figuring this out).
	
2005.10.16 -- Version 2.1-beta3

* Added PKCS#11 support (Alon Bar-Lev).
* Enable the use of --ca together with --pkcs12.  If --ca is
  used at the same time as --pkcs12, the CA certificate is loaded
  from the file specified by --ca regardless if the pkcs12 file
  contains a CA cert or not (Mathias Sundman).
* Merged --capath patch (Thomas Noel).
* Merged --multihome patch.
* Added --bind option for TCP client connections (Ewan Bhamrah
  Harley).
* Moved "plugin" directory to "plugins" to deal with strange
  automake problem that ended up being also fixable with
  ".PHONY: plugin" in Makefile.am.

2005.10.13 -- Version 2.1-beta2

* Made --sndbuf and --rcvbuf pushable.

2005.10.01 -- Version 2.1-beta1

* Made LZO setting pushable.
* Renamed sample-keys/tmp-ca.crt to ca.crt.
* Fixed bug where remove_iroutes_from_push_route_list
  was missing routes if those routes had
  an implied netmask (by omission) of 255.255.255.255. 
* Merged with 2.0.3-rc1
* easy-rsa/2.0 moved to easy-rsa
* old easy-rsa moved to easy-rsa/1.0

2005.09.23 -- Version 2.0.2-TO4

* Added feature to TAP-Win32 adapter to allow it to be
  opened from non-administrator mode.  This feature
  is enabled by default, and can be enabled/disabled
  in the adapter advanced properties dialog.
* Added --allow-nonadmin standalone option for Windows to
  set TAP adapter to allow non-admin access.  This
  is a user-mode version of the code, and duplicates
  the same feature as the above entry.
* Added fix that attempts to solve corner case of tunnel not